<resources>
    <!--蒋勇豪添加-->
    <string name="yema">页码</string>
    <string name="geshu">个数</string>
    <string name="xunchastarttime">开始</string>
    <string name="xunchajiezhi">结束</string>
    <string name="tishi">有未结束的填报信息,是否继续填报上一次内容?</string>
    <string name="jixu">继续填报上一次内容</string>
    <string name="jieshu">结束并填报新的信息</string>
    <string name="xuncharen">巡查人</string>
    <string name="xuncharenxingming">巡查人姓名</string>
    <string name="xunchaguanliyuan">巡查管理员</string>
    <string name="xunchaguanliyuanxingming">巡查管理员姓名</string>
    <string name="tianqi">天气</string>
    <string name="tianqiqingkuang">天气情况</string>
    <string name="xinyiqi">开始新一期填报</string>
    <string name="likai">不写了,离开</string>
    <string name="xinxitianbao">巡查信息填报</string>
    <string name="dituxuandian">地图选点</string>
    <string name="denglu">登录</string>
    <string name="qingshuruyonghu">请输入用户名</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">返回</string>
    <string name="no_photo">相册没有图片</string>
    <string name="pic_title">查看</string>
    <!---->
    <string name="app_name">南水北调</string>
    <string name="app_back">返回</string>
    <string name="xunchatb">巡查填报</string>
    <string name="shijiansb">事件上报</string>
    <string name="saoyis">实时数据</string>
    <string name="wode">我的</string>
    <string name="xunchafanwei">巡查范围</string>
    <string name="kaishizhuanghao">开始桩号</string>
    <string name="jieshuzhuanghao">结束桩号</string>
    <string name="data">时间\t\t\t\t\t</string>
    <string name="weather">天气\t\t\t\t\t</string>
    <string name="tianxiezhuanghao1">填写桩号如04</string>
    <string name="tianxiezhuanghao2">填写桩号如020</string>
    <string name="wancsb">完成并上报</string>
    <string name="baocbd">保存至本地</string>
    <string name="shifasj">事发时间</string>
    <string name="didian">地点</string>
    <string name="wodewz">我的位置</string>
    <string name="qingbaobumen">情报部门</string>
    <string name="qingshuruqbbm">请输入情报部门</string>
    <string name="qingbaory">情报人员</string>
    <string name="qingshuruqbry">请输入人员名称</string>
    <string name="shijianqk">事件情况</string>
    <string name="xianqichuliqk">先期处理情况</string>
    <string name="weitianxie">未填写</string>
    <string name="zhaopiansc">照片上传</string>
    <string name="shipinsc">视频上传</string>
    <string name="xiangji">相机</string>
    <string name="bendixc">本地相册</string>
    <string name="quxiao">取消</string>
    <string name="shijianmc">事件名称</string>
    <string name="shijianxz">事件性质</string>
    <string name="dengjicp">等级初判</string>
    <string name="chubuyy">初步原因</string>
    <string name="qingshurushijianmc">请输入事件名称</string>
    <string name="shuizhiwr">水质污染</string>
    <string name="jinji">紧急</string>
    <string name="renwei">人为</string>
    <string name="beizhu">备注</string>
    <!--young-->
    <string name="shijianlx">事件类型</string>
    <string name="weizhi">坐标</string>
    <!---->
    <!--赵元晴添加 -->
    <string name="xunchaneirong">巡查内容</string>
    <string name="xunchaneirong1">保护范围内是否有工程勘测</string>
    <string name="xunchaneirong2">保护范围内是否新增施工</string>
    <string name="xunchaneirong3">保护范围内是否积水</string>
    <string name="xunchaneirong4">保护范围内是否有沉陷</string>
    <string name="xunchaneirong5">原遗留违章是否有新变化</string>
    <string name="xunchaneirong6">管线中心桩有无损毁</string>
    <string name="wentimiaoshu">问题描述</string>
    <string name="chulifangfa">处理方法</string>
    <string name="qingshuruddmc">请输入地点名称</string>
    <string name="xunchaduixiangtitle">请填写巡查表中的信息</string>
    <string name="xunchaduixiangguanxian">管线</string>
    <string name="xunchaduixiangpaiqifajing">排气阀井</string>
    <string name="xunchaduixiangpaikongjing">排空井</string>
    <string name="xunchaduixiangfenshuikou">分水口</string>
    <string name="xunchaduixiangyzfenshuikou">亦庄分水口</string>
    <string name="xunchaduixiangyijingxing">00:00</string>
    <string name="tianbaoxinxinxi">\t\t\t填报新信息\t\t\t</string>
    <string name="queding">确定</string>
    <string name="sheshixinxi">设施信息</string>
    <string name="shebeiliebiao">设备列表</string>
    <string name="doubleriqi">日期\t\t\t\t\t\t</string>
    <string name="doublejinghao">井号\t\t\t\t\t\t</string>
    <string name="doublejinghaohint">请输入井号</string>
    <string name="doublehuanjingsheshi">环境设施</string>
    <string name="doublehuanjingsheshihint">请输入环境设施</string>
    <string name="doubletianqiqingkuang">天气情况</string>
    <string name="doublebeizhu">备注\t\t\t\t\t\t</string>
    <string name="doublebeizhuhint">请输入备注信息</string>
    <string name="southzhuangpai">桩牌</string>
    <string name="southhenduozhuang">里程桩、界桩、宣传牌、警示牌</string>
    <string name="southdiushi">丢失/损坏</string>
    <string name="southzijibuqing">字迹不清/锈蚀</string>
    <string name="southqingxie">倾斜/倒伏</string>
    <string name="southdimian">地面明显可见有水泄漏</string>
    <string name="southguanxianweizhi">管线所在位置上部土壤泥泞或湿润，或杂草生长较周围茂盛，或冬天雪地有反常的溶雪地带</string>
    <string name="southguanxiantongguo">管线通过的局部地面发生沉陷</string>
    <string name="southguanxianfujin">管线附近排水沟或河道土壤出现清水或泉涌现象</string>
    <string name="southzhongzhi">种植根系可能深达管涵埋设部位的植物</string>
    <string name="southkaigou">开沟挖渠或正在建造的建筑物或构筑物</string>
    <string name="southquanzhan">圈占及进场路被断</string>
    <string name="southduifang">堆放可能会影响工程安全的重物</string>
    <string name="southbaopo">爆破、打井、打桩、钻探、取土、挖砂</string>
    <string name="southqingdaolaji">倾倒垃圾、废渣等固体废物</string>
    <string name="southpaifangwushui">排放污水、废液等有毒有害化学物品</string>
    <string name="southpaishuigou">排水沟渠损坏、淤积、堵塞</string>
    <string name="southqitakeneng">其他可能危害工程安全的行为</string>
    <string name="southqingkuangshuoming">情况说明</string>
    <string name="southguanxianbaohu">管线保护范围</string>
    <string name="southloushuiqingkuang">漏水情况</string>
    <string name="southweizhang">违章活动或建筑</string>
    <string name="doublefatiwendu">阀体温度℃</string>
    <string name="doublejingneiwendu">井内温度℃</string>
    <string name="doublezuoxian">左线</string>
    <string name="doubleyouxian">右线</string>
    <string name="doublehintyouxian">请输入右线</string>
    <string name="doublehintzuoxian">请输入左线</string>
    <string name="qingshuru">请输入</string>
    <string name="south_gq_jh">井号</string>
    <string name="south_gq_paikongjingjh">排空井井号</string>
    <string name="south_gq_sj">时间</string>
    <string name="south_gq_jcl">进场路</string>
    <string name="south_gq_wl">围栏</string>
    <string name="south_gq_hwsbj">户外设备间</string>
    <string name="south_gq_shoujing">手井</string>
    <string name="south_gq_tqk">通气孔</string>
    <string name="south_gq_swwd">室外温度</string>
    <string name="south_gq_snwd">室内温度</string>
    <string name="south_gq_jinggai">井盖</string>
    <string name="south_gq_pati">爬梯</string>
    <string name="south_gq_jingshi">井室</string>
    <string name="south_gq_jianxiudiefa">检修蝶阀</string>
    <string name="south_gq_gongzuodiefa">工作蝶阀</string>
    <string name="south_gq_chukoudiefa">出口蝶阀</string>
    <string name="south_gq_qingkuangshuoming">情况说明</string>
    <string name="paiqifa_gq_zuoxian">左线</string>
    <string name="paiqifa_gq_youxian">右线</string>
    <string name="paiqifa_gq_futi">扶梯</string>
    <string name="paiqifa_gq_fati">阀体</string>
    <string name="paiqifa_gq_zuidi">最低</string>
    <string name="paiqifa_gq_zuigao">最高</string>
    <string name="nanganqupaikongjingshangduan">南干渠排空井上段</string>
    <string name="wodegongzuobutton">退出登录</string>
    <string name="waitshijianxingzhi">事件性质</string>
    <string name="waityujingjibie">预警级别</string>
    <string name="evolvebackfankuishijian">反馈时间</string>
    <string name="evolvebackjinzhanmiaoshu">进展描述</string>
    <!---->
    <string name="xinshijian">添加新突发上报事件</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="tufasjsb">突发事件上报</string>
    <string name="luxian">路线</string>
    <string name="sousuo">搜索</string>
    <string name="wodeweizhi">我的位置</string>
    <string name="shuruzhongdian">请输入终点</string>
    <string name="qingkongjilu">清空历史记录</string>
    <string name="shijianmc1">事件名称:</string>
    <string name="shifasj1">事发时间:</string>
    <string name="tuichutishi">退出提示</string>
    <string name="xuanzeleixing">选择突发事件类型</string>
    <string name="gongchengsh">工程损害</string>
    <string name="jidiangz">机电故障</string>
    <string name="qingxuanze">请选择</string>
    <string name="xuanzexingzhi">选择突发事件性质</string>
    <string name="dengjichupan">突发事件等级初判</string>
    <string name="chubuyuanyin">选择突发事件初步原因</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="shijian">时间</string>
    <string name="jinghao">井号</string>
    <string name="dishangbufen">地上部分</string>
    <string name="dixiabufen">地下部分</string>
    <string name="weilan">围栏</string>
    <string name="dimian">地面</string>
    <string name="qikong">气孔</string>
    <string name="jinggai">井盖</string>
    <string name="weisheng">卫生</string>
    <string name="pati">爬梯</string>
    <string name="hulan">护栏</string>
    <string name="jingbi">井壁</string>
    <string name="jingdi">井底</string>
    <string name="qifa">气阀</string>
    <string name="zhafa">闸阀</string>
    <string name="qiufa">球阀</string>
    <string name="paikongjingjh">排空井井号</string>
    <string name="ganjing">干井</string>
    <string name="shijing">湿井</string>
    <string name="chushuifajing">出水阀井</string>
    <string name="fenshuikouhao">分水口号</string>
    <string name="ganxianjianxj">干线检修井</string>
    <string name="zhiguanjianxj">支管检修井</string>
    <string name="zhiguanceliuj">支管测流井</string>
    <string name="dongganqupaiqijing">东干渠排气井</string>
    <string name="dongganqupaikongjing">东干渠排空井</string>
    <string name="dongganqufenshuikou">东干渠分水口</string>
    <string name="shanchu">删除</string>
    <string name="shangbao">上报</string>
</resources>
